[package]
name = "generate-radar-scenarios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.13", features = ["derive"] }
indicatif = "0.17.5"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
